Update solution