@@ -10,37 +10,46 @@ import java.util.List;
  */
 public class Deck {
 
-    /** Список карт, находящихся в игре. Т.е те, которые можно вытащить */
+    /** Список карт, находящихся в игре. Т.е те, которые можно вытащить. */
     private List<Card> cards;
 
-    /**Конструирует колоду карт, сразу ее тасуя */
+    /**Конструирует колоду карт, сразу ее тасуя. */
     public Deck() {
         refillCards();
     }
 
-    /** Перезаполняет карты в колоде и тасует их*/
+    /** Конструктор для создания кастомной колоды. */
+    public Deck(List<Card> cards) {
+        this.cards = new ArrayList<>(cards);
+    }
+
+    /** Перезаполняет карты в колоде и тасует их. */
     public void refillCards() {
         this.cards = new ArrayList<>();
-        for (int i = 0; i < 52; i++) {
-            this.cards.add(new Card(i));
+        for (Suit suit : Suit.values()) {
+            for (Rank rank : Rank.values()) {
+                Card card = new Card(suit, rank);
+                this.cards.add(card);
+            }
         }
         Collections.shuffle(this.cards);
     }
 
     /**
-     * Достает произвольную карту из колоды
+     * Достает произвольную карту из колоды.
      *
-     * @return произвольная карта из колоды
+     * @throws IllegalStateException при попытке достать карту из пустой колоды.
+     * @return произвольная карта из колоды.
      */
     public Card draw() {
         if (this.cards.isEmpty()) {
             throw new IllegalStateException("Колода пуста! Нельзя взять карту.");
         }
-        return this.cards.remove(this.cards.size() - 1);
+        return this.cards.removeLast();
     }
 
     /**
-     * Проверяет насколько мало карт осталось в колоде
+     * Проверяет насколько мало карт осталось в колоде.
      *
      * @return true, если карт в колоде меньше половины; false иначе
      */
@@ -49,7 +58,7 @@ public class Deck {
     }
 
     /**
-     * Возвращает количество карт в колоде в настоящий момент
+     * Возвращает количество карт в колоде в настоящий момент.
      *
      * @return количество карт в колоде в настоящий момент
      */
